q10/10.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dashboard
  name: dashboard
  namespace: qq5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dashboard
    spec:
      containers:
      - image: drupal:10.2.7-php8.2-fpm-bookworm
        name: drupal
        ports:
        - containerPort: 80
