q10/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dashboard
  name: dashboard
  namespace: qq5
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dashboard
  type: LoadBalancer
status:
  loadBalancer: {}
