q10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "dashboard.qq5.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dashboard
            port:
              number: 80
